[gd_scene load_steps=5 format=3 uid="uid://bl2yg5twa4fqb"]

[ext_resource type="Theme" uid="uid://dukbhiljsmqyd" path="res://graphics/ui_theme.tres" id="1_mrgx2"]
[ext_resource type="Script" path="res://scripts/menus.gd" id="2_rjel8"]
[ext_resource type="Texture2D" uid="uid://dvoawercc7c63" path="res://graphics/sprites/icon.png" id="2_wx2qk"]
[ext_resource type="Script" path="res://scripts/settings.gd" id="4_xobbm"]

[node name="Menus" type="Control" node_paths=PackedStringArray("active")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mrgx2")
script = ExtResource("2_rjel8")
time = 0.3
active = NodePath("Settings")

[node name="Main" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icon" type="TextureRect" parent="Main"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -174.0
offset_right = -217.0
offset_bottom = 82.0
grow_horizontal = 0
grow_vertical = 2
rotation = -0.436332
pivot_offset = Vector2(128, 128)
texture = ExtResource("2_wx2qk")
expand_mode = 1

[node name="Title" type="Label" parent="Main"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -516.0
offset_top = 26.0
offset_right = -172.0
offset_bottom = 134.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 96
text = "Turbulence"

[node name="Play" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = -110.5
offset_right = 203.0
offset_bottom = -27.5
grow_vertical = 2
text = "Play"

[node name="Settings" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 110.0
offset_top = 30.5
offset_right = 301.0
offset_bottom = 113.5
grow_vertical = 2
text = "Settings"

[node name="Quit" type="Button" parent="Main"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -93.0
offset_right = -35.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 43
text = "Quit"

[node name="Settings" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_xobbm")

[node name="Title" type="Label" parent="Settings"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -54.0
offset_right = -205.0
offset_bottom = 54.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 96
text = "Settings"

[node name="Back" type="Button" parent="Settings"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -101.0
offset_top = -93.0
offset_right = -35.0
offset_bottom = -34.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 43
text = "Back"

[node name="Music" type="HSlider" parent="Settings"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -165.0
offset_right = 482.0
offset_bottom = -133.0
grow_vertical = 2
min_value = -80.0
max_value = 6.0
value = 6.0

[node name="Label" type="Label" parent="Settings/Music"]
layout_mode = 0
offset_top = -72.0
offset_right = 122.0
offset_bottom = 1.0
theme_override_constants/outline_size = 10
text = "Music"

[node name="SoundEffects" type="HSlider" parent="Settings"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -47.0
offset_right = 482.0
offset_bottom = -15.0
grow_vertical = 2
min_value = -80.0
max_value = 6.0
value = 6.0

[node name="Label" type="Label" parent="Settings/SoundEffects"]
layout_mode = 0
offset_top = -72.0
offset_right = 122.0
offset_bottom = 1.0
theme_override_constants/outline_size = 10
text = "Sound Effects"

[node name="FullScreen" type="CheckBox" parent="Settings"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 34.0
offset_right = 479.0
offset_bottom = 117.0
grow_vertical = 2
theme_override_constants/outline_size = 10
text = "Fullscreen"

[node name="CameraShake" type="CheckBox" parent="Settings"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = 171.0
offset_right = 489.0
offset_bottom = 254.0
grow_vertical = 2
theme_override_constants/outline_size = 10
text = "Camera Shake"

[connection signal="mouse_entered" from="Main/Icon" to="." method="icon_hover"]
[connection signal="mouse_exited" from="Main/Icon" to="." method="icon_unhover"]
[connection signal="pressed" from="Main/Play" to="." method="play"]
[connection signal="pressed" from="Main/Settings" to="." method="enable" binds= ["Settings"]]
[connection signal="pressed" from="Main/Quit" to="." method="quit"]
[connection signal="pressed" from="Settings/Back" to="." method="enable" binds= ["Main"]]
[connection signal="drag_ended" from="Settings/Music" to="Settings" method="_on_music_drag_ended"]
[connection signal="value_changed" from="Settings/Music" to="Settings" method="_on_music_value_changed"]
[connection signal="value_changed" from="Settings/SoundEffects" to="Settings" method="_on_sound_effects_value_changed"]
[connection signal="toggled" from="Settings/FullScreen" to="Settings" method="_on_full_screen_toggled"]
[connection signal="toggled" from="Settings/CameraShake" to="Settings" method="_on_camera_shake_toggled"]
